--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Login</title>
+        <title>LOGIN</title>
         <style type="text/css">
         body   
             {  
